# filtergenie

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  analyzer.py  api.py  auth.py  build.js  cache.db  cache.py  docker-entrypoint.sh  eslint.config.js  hello.py  main.py  package-lock.json  package.json  product_analyzer.py  products.db  pyproject.toml  pytest.ini  render.yaml  requirements.txt  tailwind.config.js  test_api.py  utils.py
.github/workflows/: build-extension.yml  ci.yml  npm-build.yml  pre-commit.yml  release-extension.yml  resize-icons.yml  run-tests.yml  tests.yml  update-badge.yml  update-badges.yml  update_badge.yml
backend/: __init__.py  app.py  config.py  dependencies.py
backend/analyzer/: __init__.py  engine.py  models.py  processor.py
backend/api/: models.py  routes.py  services.py
backend/auth/: __init__.py  middleware.py
backend/common/: cache.py  db.py  logging.py  safe.py  utils.py
backend/scrape/: __init__.py  base.py
backend/scrape/vendors/: __init__.py  ebay.py  leboncoin.py  vinted.py
backend/scraper/: __init__.py  base.py
backend/services/: __init__.py  analyzer_service.py  product_service.py  scraper_service.py
backend/tests/: test_analyzer.py  test_api.py  test_config.py  test_db.py  test_filters.py  test_product.py  test_scraper.py  test_scraping.py
chrome-extension/: background.js  content-core.js  content.js  manifest.json  styles.css
chrome-extension/popup/: popup.css  popup.html  popup.js
chrome-extension/src/background/: background.js
chrome-extension/src/content/: content.js
chrome-extension/vendors/: leboncoin.js  vendor-interface.js
extension/: build.js  manifest.json  package-lock.json  package.json  tailwind.config.js
extension/assets/icons/: resize.sh
extension/popup/: popup.css  popup.html  popup.js
extension/popup/components/: ui-components.js
extension/popup/styles/: tailwind.css
extension/src/: api-settings.js  background.js  content.js  defaults.js  platform-registry.js
extension/src/background/: background.js
extension/src/content/: content-core.js  content.js  styles.css
extension/utils/: apiSettings.js  defaults.js  platformRegistry.js  spinnerUtils.js
extension/vendors/: leboncoin.js  vendor-interface.js
scrape/: __init__.py  __main__.py  base.py
scrape/vendors/: ebay.py  vinted.py
scrape/websites/: ebay.py  leboncoin.py  vinted.py
scrapers/: __init__.py  __main__.py  base.py  ebay.py  leboncoin.py  vinted.py
scraping/: __init__.py  __main__.py  base.py  ebay.py  leboncoin.py  vinted.py
scripts/: deployment_badge.sh  generate_badge.sh  render_badge.sh  resize_icons.sh  update_badge.sh
tests/: test_analyzer.py  test_api.py
