[project]
name = "filtergenie"
version = "0.1.0"
description = "FilterGenie: AI-powered filtering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "beautifulsoup4>=4.13.3",
    "fastapi[standard]>=0.115.12",
    "openai>=1.73.0",
    "pillow>=11.1.0",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "structlog>=25.3.0",
]

[project.optional-dependencies]
local = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "hf-xet>=1.1.0",
    "outlines>=0.2.3",
    "sentencepiece>=0.2.0",
    "transformers>=4.51.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 100

[tool.ty.rules]
unresolved-import = "warn"
