[project]
name = "filtergenie"
version = "0.1.0"
description = "FilterGenie: AI-powered filtering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.2",
    "groq>=0.25.0",
    "instructor>=1.8.2",
    "pillow>=11.1.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "structlog>=25.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]
